# libframegrabber

./: ChangeLog  Makefile.am  bootstrap  configure.ac
build-aux/: warning.m4
src/: Makefile.am  framegrabber-fwd.hh  framegrabber-plugin.hh  framegrabber.cc  framegrabber.hh
src/null-plugin/: Makefile.am  libframegrabber-null-plugin.cc
tests/: Makefile.am  atlocal.in  null-plugin.at  null-plugin.cc  testsuite.at
